--- a/style.css
+++ b/style.css
@@ -1,13 +1,81 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
 }
-.header {
-  min-height: 100vh;
-  width: 100%;
-  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
-    url(pexels-daniel-absi-952670.jpg);
-  background-position: center;
+
+body {
+  color: #fff;
+  background-image: url("—Pngtree—pink memphis playful abstract portfolio_1347365.png");
   background-size: cover;
+  background-position: center;
+  background-attachment: fixed; 
+}
+
+#header {
   position: relative;
+  width: 100%;
+  height: 100vh;
+
+}
+
+h1 {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  font-size: 48px;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 25px;
+}
+
+#menu {
+  position: absolute;
+  top: 35px;
+  right: 10px;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+nav ul li {
+  display: inline-block;
+  list-style: none;
+  margin: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 25px;
+}
+
+section {
+  padding: 20px;
+  text-align: center;
+  margin: 20px;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+
+section h2 {
+  font-size: 24px;
+  margin-bottom: 20px; 
+}
+
+section p {
+  font-size: 16px; 
+  margin-top: 20px; 
 }
