--- a/style.css
+++ b/style.css
@@ -51,13 +51,18 @@ nav {
 nav ul li {
   display: inline-block;
   list-style: none;
-  margin: 10px;
+  margin: 20px;
 }
 
 a {
   text-decoration: none;
   color: #fff;
   font-size: 25px;
+}
+b {
+  text-decoration: none;
+  color: #fff;
+  font-size: 13px;
 }
 
 section {
@@ -72,10 +77,21 @@ section {
 
 section h2 {
   font-size: 24px;
-  margin-bottom: 20px; 
+  margin-bottom: 10px; 
+}
+
+section h4 {
+  font-size: 16px;
+  margin-bottom: 20px;
 }
 
 section p {
   font-size: 16px; 
-  margin-top: 20px; 
+  margin-top: 10px; 
+}
+
+
+section p1 {
+  font-size: 13px; 
+  margin-top: 10px; 
 }
