--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 * {
   margin: 0;
   padding: 0;
@@ -17,7 +19,6 @@ body {
   position: relative;
   width: 100%;
   height: 20vh;
-
 }
 
 h1 {
@@ -59,6 +60,7 @@ a {
   color: #fff;
   font-size: 25px;
 }
+
 b {
   text-decoration: none;
   color: #fff;
@@ -73,7 +75,6 @@ section {
   border-radius: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-
 
 section h2 {
   font-size: 24px;
@@ -90,8 +91,14 @@ section p {
   margin-top: 10px; 
 }
 
-
 section p1 {
   font-size: 13px; 
   margin-top: 10px; 
+}
+
+
+
+/* Hide all sections by default */
+.content-section {
+  display: none;
 }
