--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
   color: #fff;
-  background-image: url("—Pngtree—pink memphis playful abstract portfolio_1347365.png");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.62), rgba(252, 0, 0, 0.5)), url("—Pngtree—pink memphis playful abstract portfolio_1347365.png");
   background-size: cover;
   background-position: center;
   background-attachment: fixed; 
@@ -66,12 +66,16 @@ b {
 }
 
 section {
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  width: 50%;
   padding: 20px;
   text-align: center;
-  margin: 20px;
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 20px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
 }
 
 
@@ -94,4 +98,9 @@ section p {
 section p1 {
   font-size: 13px; 
   margin-top: 10px; 
+}
+
+/* Hide all sections by default */
+.content-section {
+  display: none;
 }
